--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         Clipboard allows you to track and organize everything you copy.
         Instantly access your clipboard on all your devices.
       </p>
-      <div role="download">
+      <div role="button">
         <button class="btn-ios">Download for iOS</button>
         <button class="btn-mac">Download for Mac</button>
       </div>
@@ -179,7 +179,7 @@
         Available for free on the App Store. Download for Mac or iOS, sync with iCloud
         and you’re ready to start adding to your clipboard.
       </p>
-      <div role="download">
+      <div role="button">
         <button class="btn-ios">Download for iOS</button>
         <button class="btn-mac">Download for Mac</button>
       </div>
